#8 Creación de tests y configuración del gestor de tareas

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@ tests/*.log
 *.bak
 *.swp
 .DS_Store
+
+# Archivos generados por coverage (pruebas de cobertura)
+.coverage
+htmlcov/
+.coverage.*
+*.cover
+*.coveragerc
