--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ flasgger = "0.9.7.1"
 sqlalchemy = "1.3.24"
 pytest = "8.3.3"
 pytest-cov = "6.0.0"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
