--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sqlalchemy = "1.3.24"
 pytest = "8.3.3"
 pytest-cov = "6.0.0"
 gunicorn = "^23.0.0"
+psycopg2-binary = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
